added a frontend to the interview module

--- a/img_catalog_tui/flask/templates/imageset.html
+++ b/img_catalog_tui/flask/templates/imageset.html
@@ -183,6 +183,9 @@
                     <a href="/imageset/{{ foldername }}/{{ imageset_name }}/edit" class="btn btn-primary" target="_blank">
                         ✏️ Edit
                     </a>
+                    <a href="/imageset/{{ foldername }}/{{ imageset_name }}/interview" class="btn btn-primary" target="_blank">
+                        🚀 Interview
+                    </a>
                     <button class="btn btn-secondary" onclick="copyFolderPath()">
                         📁 Copy Folder
                     </button>
