Issue 2: Open folder page in new tab when clicking View Folder button

--- a/img_catalog_tui/flask/templates/folders.html
+++ b/img_catalog_tui/flask/templates/folders.html
@@ -228,9 +228,9 @@
             }
         }
         
-        // View folder - navigate to folder details page
+        // View folder - navigate to folder details page in new tab
         function viewFolder(folderName) {
-            window.location.href = `/folder/${encodeURIComponent(folderName)}`;
+            window.open(`/folder/${encodeURIComponent(folderName)}`, '_blank');
         }
         
         // Message display functions
