--- a/img_catalog_tui/flask/templates/base.html
+++ b/img_catalog_tui/flask/templates/base.html
@@ -18,6 +18,7 @@
                     {% block navigation %}
                     <a href="/">Home</a>
                     <a href="/folders">Folders</a>
+                    <a href="/search">Search</a>
                     {% endblock %}
                 </nav>
             </div>
